themes/greatermedia/assets/css/sass/components/_header.scss
.header{
	position: relative;
	width: 100%;
	padding: 0;
	background-color: $header-bg;
	@include transition(all 200ms linear);
	@include bp(medium) {
		border-bottom: 1px solid $primary-border;
	}
}

.header--pinned {
	@include transform(translateY(0%));
}

.header--unpinned {
	@include transform(translateY(-100%));
}

.header .container {
	padding: 0 .714285714286%;
	position: relative;
}

.header__main {
	width: 100%;
	height: 70px;
	padding: 0;
	background-color: $secondary-bg;
	border-bottom: 1px solid $header-border;
	@include bp(medium) {
		height: 82px;
		border-top: 1px solid $header-border;
	}
}

#breaking-news-banner {
	display: none;
	@include bp(medium) {
		display: block;
	}
}

.header__logo{
	@include span-columns(4);
	@include omega;
	height: 70px;
	padding: $header-logo-padding 0;
	line-height: 1;
	position: relative;
	
	@include bp(medium) {
		max-width: 200px;
		height: 82px;
	}

	@include bp(large) {
		@include span-columns(2);
		padding-left: $header-logo-padding;
	}
}

.header__logo--img{
	margin: 0 auto;
	max-height: 100%;
	max-width: 100%;
	height: auto;
	width: auto;
	position: relative;
	top: 50%;
	@include transform(translateY(-50%));

	@include bp(medium){
		margin-left: 70px; /* space enough for the mobile menu */
		text-align: left;
	}

	@include bp(large) {
		margin-left: auto;
	}
}

// container for main header navigation
.header__nav {
	height: 82px;
	display: none;
	line-height: 1;

	@include bp(large) {
		@include span-columns(7);
	}
	@include bp(x-large) {
		@include span-columns(7);
	}
}

// container for secondary navigation -- gigya registration, social links, search
.header__secondary {
	position: absolute;
	top: 22px;
	right: 20px;
	line-height: 1;
	text-align: right;
	@include bp(medium) {
		right: 0;
		@include span-columns(3);
		@include omega;
		top: auto;
		height: 82px;
		@include transform(none);
	}
	@include bp(large) {
		@include span-columns(3);
		@include omega;
	}
	@include bp(x-large) {
		@include span-columns(3);
		@include omega;
	}
}

// container for account links
.header__account {
	display: block;
	float: right;
	margin: 0 auto;
	color: $color-text-white;
	cursor: pointer;
	@include bp(medium) {
		width: 64px;
		height: 82px;
		color: $secondary-heading;
	}
}

.header__account:hover {
	@include bp(medium) {
		background-color: $color-text-red;
		color: $color-text-white;
	}
}

.header__account--btn {
	display: block;
	margin: 0 auto;
	text-align: center;
	font-size: 25px;

	@include bp(medium) {
		height: 82px;
		width: 64px;
		padding: 32px 0;
		font-size: ms(3);
	}

	@include bp(large) {
		font-size: ms(1);
	}
}

/** An image is shown if the current user is logged in and Gigya gives us a thumbnail URL **/
.header__account--btn img {
	display: inline-block;
	max-height: 28px;
	width: auto;
	border: 1px solid white;

	@include bp(medium) {
		max-height: 20px;
	}
}

.header__account--links {
	display: none;
}

.header__account:hover .header__account--links {
	display: none;
	@include bp(medium) {
		position: absolute;
		display: block;
		top: 80px;
		right: 0;
		min-width: 300px;
	}
}

.header__account--open {
	display: block;
}

// gigya dependencies
.register, .login {
	visibility: hidden;
}

// container for social links
.header__social {
	display: none;
	@include bp(medium) {
		display: block;
		float: right;
		height: 82px;
		font-size: ms(0);
	}
}

// container for search button
.header__search {
	display: none;
	color: $primary-border;
	cursor: pointer;
	@include bp(medium) {
		position: relative;
		display: block;
		float: right;
		height: 82px;
		margin-right: 2em;
	}
}

.header__search--span {
	display: none;
	@include bp(medium) {
		display: block;
		float: left;
		height: 82px;
		padding: 36px 0;
		margin-left: .625em;
		font-size: ms(0);
	}

	@include bp(large) {
		font-size: ms(-2);
	}
}

.header__search--btn {
	display: block;
	float: left;
	height: 82px;
	padding: 34px 0 30px;
}

.header__search--btn:before {
	@extend %gmr-icons;
	font-size: ms(3);
	content: "\e612";

	@include bp(large) {
		font-size: ms(1);
	}
}

